[project]
name = "youtube-blog-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.34.3",
    "langchain>=0.3.27",
    "langgraph>=0.6.3",
    "openai>=1.98.0",
    "requests>=2.32.4",
    "typing>=3.10.0.0",
    "youtube-transcript-api>=1.2.1",
]
